m10-change map location to Grand Canyon, change the animals location to Grand Canyon, fix the animal list layout problem

--- a/xinya.wang/css/app.css
+++ b/xinya.wang/css/app.css
@@ -886,22 +886,60 @@ ul{
     transform: translate(-50%, calc(-50% + 0.2em));
 }
 
-#list-page .overscroll ul{
+#list-page .overscroll{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0 1em;
+    margin-bottom: 4em;
+    /*flex-flow: row wrap*/
+}
+
+/*#list-page .overscroll ul{
     position: relative;
     width: 100%;
     height: auto;
     padding: 0 1em;
     margin-bottom: 4em;
-    flex-flow: row wrap
+    flex-flow: row wrap;
+}*/
+
+.overscroll .grid-item{
+    position: relative;
+    /*width: 42%;*/
+    width: 100%;
+    height: 54vw;
+    margin-bottom: 1em;
+    overflow: hidden;
+    text-align: left;
+    font-size: 0.8em;
 }
 
-#list-page .overscroll li{
+.overscroll .grid-item figure{
+    margin: 0px;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    font-size: 0.8em; 
+}
+
+.overscroll .grid-item img{
+    width: inherit;
+    height: auto;
+    border-radius: 0.5em;
+}
+
+.overscroll .grid-item p{
+    margin: 0.1em auto;
+    font-weight: 400;
+    font-size: 0.8em;
+}
+
+/*#list-page .overscroll li{
     position: relative;
     width: 42%;
     height: 54vw;
-    /*background-color: var(--color-neutral-light);*/
     margin-bottom: 1em;
-/*    border-radius: 1.5em;*/
     overflow: hidden;
     text-align: left;
     font-size: 0.8em;
@@ -925,7 +963,7 @@ ul{
     margin: 0.1em auto;
     font-weight: 400;
     font-size: 0.8em;
-}
+}*/
 
 
 /* Profile */
@@ -978,18 +1016,28 @@ ul{
     margin: 0.2em;
 }
 
-
-#user-profile-page .profile-others{
-     margin: 1em 0;
-}
-
+/*-- animal profile */
 .profile-others{
     position: relative;
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    padding: 0 1em;
+    /*width: 100%;*/
+    /*height: auto;*/
+    /*overflow: hidden;*/
+    /*padding: 0 1em;*/
     /*background-color: red;*/
+    flex: 1 1 100%;
+    /*position: relative;*/
+}
+
+.profile-others-menu{
+    position: relative;
+    margin: 0.5em 0;
+    /*height: 45px;*/
+}
+
+.profile-others-content{
+    position: relative;
+    /*width: 100%;*/
+    flex: 1 1 100%;
 }
 
 .profile-others ul{
@@ -1023,6 +1071,7 @@ ul{
     border-radius: 0.4em;
     padding: 0.5em;
     text-align: center;
+    margin-bottom: 1em;
 }
 
 .item-content{
@@ -1058,6 +1107,15 @@ ul{
     grid-template-rows: repeat(3, 30vw);
     /*padding: 0.5em;*/
 }
+
+.animal-grid-container{
+    display: grid;
+    /*grid-gap: 2em;*/
+    grid-column-gap: 2em;
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 5.5em;
+    /*grid-template-rows: repeat(3, 30vw);*/
+}   
 
 .grid-item img {
     width: 100%;
@@ -1184,7 +1242,8 @@ footer ul{
     position: relative;
     top: 0;
     width: 100%;
-    height: 60vw;
+    /*height: 70vw;*/
+    height: 45%;
     vertical-align: middle;
     color: var(--color-white);
 }
